# Examen-Parcial-3-Roberto-Cardenas

./: CMakeLists.txt  README.md  lanzador.cpp  lanzador.h  main.cpp
actor/: Actor.cpp  Actor.h
crud/: Crud.cpp  Crud.h
tarea/: Tarea.cpp  Tarea.h
